--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "@types/jsonwebtoken": "^9.0.2",
+    "@vercel/postgres": "^0.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
